--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>apache-jena-libs</artifactId>
-            <version>4.6.1</version>
+            <version>4.9.0</version>
             <type>pom</type>
         </dependency>
         <dependency>
@@ -51,6 +51,22 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
             <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.snowflake</groupId>
+            <artifactId>snowflake-jdbc</artifactId>
+            <version>3.14.2</version>
+        </dependency>
+        <dependency>
+            <!--
+                Needed to avoid warning "JAXB is unavailable. Will fall back to SDK implementation which may be less
+                performant." This warning happens when uploading a stream to create a file in a Snowflake stage.
+                https://github.com/snowflakedb/snowflake-jdbc/issues/552
+                https://github.com/seek-oss/gradle-aws-plugin/issues/15
+            -->
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
     </dependencies>
 
