--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>gov.fl.flds</groupId>
-    <artifactId>data-world-ttl-to-csv</artifactId>
+    <artifactId>data-world-ttl-to-xlsx</artifactId>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
